--- a/Promises in js/index.html
+++ b/Promises in js/index.html
@@ -48,3 +48,8 @@ It does not matter what the individual async operations are. -->
  <!-- The race method is another way the promise object allows you to work with multiple promises.
 The Promise. race() method returns a promise that fulfills or rejects as soon as one of the promises in an iterable array is fulfilled or rejected.
 This array of promises is passed as an argument to the method.. -->
+
+
+<!-- Promise chaining -->
+<!-- Promise chaining is a syntax that allows us to chain together multiple asynchronous tasks in a specific order. This is great for complex code 
+where one asynchronous task needs to be performed after the completion of a different asynchronous task. -->
