--- a/Debouncing/index.html
+++ b/Debouncing/index.html
@@ -7,7 +7,7 @@
     <title>Debouncing</title>
 </head>
 <body>
-    <input type="text" onkeyup="goodSearch()">
+    <input type="text" onkeyup="goodFunction()">
     <script src="./script.js"></script>
 </body>
 </html>
